tests/compilation_failure_tests/iteration_order/repeated_variant.rs
use derive_enum_rotate::EnumRotate;

#[derive(EnumRotate)]
#[iteration_order(A, B, A)]
enum Enum {
    A, B, C
}
